--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,9 @@ Pillow
 cython
 matplotlib
 scikit-image
-tensorflow>=1.3.0
-keras>=2.0.8
-opencv-python
+tensorflow-gpu ~= 1.15.2 # mask-rcnn needs < 2.0
+keras ~= 2.2.5 # mask-rcnn needs < 2.3
+opencv-python-headless # no X11
 h5py
 imgaug
 IPython[all]
