--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,7 @@ Pillow
 cython
 matplotlib
 scikit-image
-tensorflow-gpu ~= 1.15.2 # mask-rcnn needs < 2.0
-keras ~= 2.3.1 # mask-rcnn needs < 2.4
+tensorflow ~= 2.1
 opencv-python-headless # no X11
 h5py
 imgaug --no-binary imgaug # workaround imgaug#473 (opencv-python/headless)
